[package]
name = "human_bytes"
version = "0.3.1"
authors = ["Namkhai B. <me@forkbomb9.ch>"]
edition = "2018"

description = "Crate to convert bytes into human-readable values"

repository = "https://sr.ht/~f9/human_bytes"
readme = "README.md"
keywords = ["bytes", "conversion", "format", "value-formatting", "utility"]
license = "BSD-2-Clause"

[features]
default = ["si-units"]
si-units = []
build-binary = ["anyhow", "atty", "lexopt"]
fast = ["ryu"]

[dependencies]
anyhow = { version = "1.0", optional = true }
atty = { version = "0.2", optional = true }
lexopt = { version = "0.2", optional = true }
ryu = { version = "1.0", optional = true }

[[bin]]
name = "hb"
required-features = ["build-binary"]

[profile.release]
lto = true
strip = true
